Updated firebase to new account

--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
             <h2>Need Help?</h2>
             <p>If you're experiencing any issues or have questions about using Itmam, please contact us:</p>
             <div class="contact-info">
-                <p><strong>Email:</strong> <a href="mailto:qadaatrackerapp@gmail.com">qadaatrackerapp@gmail.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:appsdevunit@gmail.com">appsdevunit@gmail.com</a></p>
             </div>
         </div>
         
